--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -13,4 +13,18 @@
 
     <artifactId>bowling-scoring-domain</artifactId>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 </project>
