--- a/app/pom.xml
+++ b/app/pom.xml
@@ -19,18 +19,15 @@
     </properties>
 
     <dependencies>
+        <!-- Bowling Scoring Module -->
         <dependency>
             <groupId>com.clivenspetit.bowlingscoring</groupId>
             <artifactId>bowling-scoring-domain</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>com.clivenspetit.bowlingscoring</groupId>
             <artifactId>bowling-scoring-data</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
         </dependency>
 
         <!-- Google Guice Dependency Injection Management Framework-->
@@ -38,6 +35,17 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>${guice.version}</version>
+        </dependency>
+
+        <!-- Apache Log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
         </dependency>
 
         <!-- JUnit -->
